Fixing: we'd only want auto overflow for x axis.

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,5 +1,5 @@
 .highlight { 
-  overflow: auto;
+  overflow-x: auto;
 }
 
 code {
